# rhfs_ris_mpi

./: 1  CLAUDE.md  CMAKE_BUILD_GUIDE.md  CMAKE_MODIFICATIONS_SUMMARY.md  CMakeLists.txt  CRITICAL_FIXES.md  FINAL_SOLUTION.md  GEMINI.md  GRASP_REFERENCE_SOLUTION.md  IEEE_INVALID_FIXES.md  Makefile  README.md  RHFS90_MPI_FIXES.md  RHFS90_MPI_Summary.md  SEGFAULT_DEBUG.md  build_cmake.sh  grasp_raw_data_load.py  log  test_all_libs_build.sh  test_build.sh  test_cmake_build.sh  test_compilation.sh  test_rhfs90_mpi_fixes.sh
src/appl/rhfs90_mpi/: BUILDCONF.sh  CMakeLists.txt  README.md  gethfd.f90  getmixblock.f90  hfs92mpi.f90  hfsggmpi.f90  hfsggmpi_I.f90  rhfs90mpi.f90  setsum.f90  test_build.sh
src/appl/ris4_mpi/: CMakeLists.txt  ris_cal.f90  rismpi.f90
src/lib/lib9290/: CMakeLists.txt  clrx.f90  iniest2.f90  lodcsh.f90  lodcsl.f90  quad.f90  setcsla.f90  setcsll.f90
src/lib/libdvd90/: CMakeLists.txt
src/lib/libmcp90/: CMakeLists.txt
src/lib/libmod/: CMakeLists.txt
src/lib/librang90/: CMakeLists.txt
src/lib/mpi90/: CMakeLists.txt  cslhmpi.f90  iniestmpi.f90  lodcslmpi.f90  lodrwfmpi.f90  mpi_bcast_char_a.f90  mpi_bcast_dp_a.f90  mpi_bcast_dp_s.f90  mpi_bcast_int_a.f90  mpi_bcast_int_s.f90  mpi_recv_char.f90  mpi_recv_int.f90  mpi_send_char.f90  mpi_send_int.f90  mpiu.f90  mpiu_int.f90  mpiu_wrappers.f90  setisompi.f90  setrwfmpi.f90
src/rhfs90_mpi/: CMakeLists.txt  hfs92mpi.f90  hfsggmpi.f90  hfsggmpi_I.f90
src/rhfszeeman95_mpi/: CMakeLists.txt  hfszeeman06mpi.f90  hfszeemanmpi_I.f90
src/ris4_mpi/: CMakeLists.txt  ris_cal_mpi_I.f90  rismpi.f90
